Validando Formulário com react-hook-form e yup

--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "license": "LGPL-3.0-or-later",
   "description": "Um software para o gestor de projetos pragmático",
   "dependencies": {
+    "@hookform/resolvers": "^0.1.1",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.8.3",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "yup": "^0.29.3",
+    "yup-locale-pt": "^0.0.5"
   },
   "repository": {
     "type": "git",
