--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "description": "Um software para o gestor de projetos pragmático",
   "dependencies": {
     "@hookform/resolvers": "^0.1.1",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
