--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "LGPL-3.0-or-later",
   "description": "Um software para o gestor de projetos pragmático",
   "dependencies": {
+    "@cypress/instrument-cra": "^1.3.2",
     "@hookform/resolvers": "^0.1.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -30,10 +31,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts -r @cypress/instrument-cra start",
     "eject": "react-scripts eject",
-    "acc_test_it": "npx cypress open",
-    "acc_test_run": "npx cypress run",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "json-server": "json-server --watch shared/projetos.json --port 3004 -H 192.168.15.4"
   },
   "eslintConfig": {
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.8.1",
     "cucumber": "^6.0.5",
     "cypress": "^5.1.0",
     "cypress-cucumber-preprocessor": "^2.5.5"
